test/corpus/comments.test
=========================
line comment
=========================

#car:vehicle

---------------------

(source_file
 (comment))

=========================
block comment
=========================

#!
car:vehicle
!#
---------------------

(source_file
 (block_comment))

=========================
nested comment
=========================

#!
#!
!#
car:vehicle
!#
---------------------

(source_file
 (block_comment))
