test/corpus/strings.test
================================================================================
empty string
================================================================================

t:=""

--------------------------------------------------------------------------------

(source_file
  (variable_definition
    (identifier_list
      (identifier))
    (expression
      (string))))

================================================================================
hello string
================================================================================

t:="hello"
--------------------------------------------------------------------------------

(source_file
  (variable_definition
    (identifier_list
      (identifier))
    (expression
      (string))))

================================================================================
escaped \ strings
================================================================================

t:="\\"
p:="\"
not:="

--------------------------------------------------------------------------------

(source_file
  (variable_definition
    (identifier_list
      (identifier))
    (expression
      (string)))
  (variable_definition
    (identifier_list
      (identifier))
    (expression
      (string))))

================================================================================
multiline string
================================================================================

t:="
this string is multiline
and should just work
"
--------------------------------------------------------------------------------

(source_file
  (variable_definition
    (identifier_list
      (identifier))
    (expression
      (string))))
